--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.74.3",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
